defaultTasks 'clean', 'screamCompile'

allprojects {
    group = 'org.screamingsandals.lib'
    version = '1.1.24'
}

buildscript {
    repositories {
        jcenter()
        maven {
            name 'screamingsandals'
            url = 'https://repo.screamingsandals.org'
        }
        maven {
            url =  "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath 'org.screamingsandals.gradle.builder:screaming-plugin-builder:1.0.9'
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.screamingsandals.gradle.builder'

    repositories {
        maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
    }

    dependencies {
        compileOnly paper()
        compileOnly waterfall()
    }

    sourceCompatibility = '11'
}
